# audiominutes

./: .env.example  .gitignore  Dockerfile  PLAN_BASE_DATOS_VECTORIAL_CHATBOT.md  PLAN_DESARROLLO.md  PLAN_DESARROLLO_FRONTEND.md  PLAN_INTEGRACION_POSTGRESQL.md  PLAN_OPORTUNIDADES_COMERCIALES.md  PLAN_POSTHOG_IMPLEMENTATION.md  README.md  docker-compose.yml  metricas_en_posthog.md  pyproject.toml  schema.sql
.antiguos/: PLAN_BASE_DATOS_VECTORIAL_CHATBOT.md  PLAN_INDICADORES_GROWTH.md  email_template.html
.cursor/rules/: filosofia-desarrollo.mdc  mentor.mdc  sistema-operativo.mdc
docs/: DATABASE_SCHEMA.md  Plan de Trabajo - AudioMinutes.docx  indicadores_growth.txt  v2 Brief del Proyecto - AudioMinutes.docx  ~$an de Trabajo - AudioMinutes.docx
src/audiominutes/: api.py  config.py  database.py  main.py  models.py  services.py  utils.py
src/audiominutes/api/: __init__.py  health.py
src/audiominutes/core/: __init__.py  config.py
src/audiominutes/models/: __init__.py
src/audiominutes/services/: __init__.py
src/audiominutes/static/: index.html
src/audiominutes/static/css/: main.css
src/audiominutes/static/js/: main.js
src/audiominutes/templates/: email_template.html
src/audiominutes/utils/: __init__.py
src/voxcliente/: api.py  config.py  database.py  main.py  models.py  services.py  utils.py
src/voxcliente/database/: __init__.py  connection.py  models.py  queries.py  services.py
src/voxcliente/prompts/: acta_generation v1.txt  acta_generation v2.txt  acta_generation.txt
src/voxcliente/services/: __init__.py  ai_service.py  analytics_service.py  email_service.py  file_manager.py  transcription_service.py
src/voxcliente/static/: index.html
src/voxcliente/static/css/: main.css
src/voxcliente/static/js/: main.js
src/voxcliente/templates/: email_template.html
