[project]
name = "audiominutes-backend"
version = "0.1.0"
description = "Backend para convertir grabaciones de audio en actas de reuniones profesionales mediante IA"
authors = [
    {name = "Paul Villalobos",email = "wilverpaul@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "assemblyai>=0.21.0",
    "openai>=1.3.0",
    "resend>=0.6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
]

[tool.poetry]
packages = [{include = "audiominutes", from = "src"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
