[project]
name = "audiominutes-backend"
version = "0.1.0"
description = "Backend para convertir grabaciones de audio en actas de reuniones profesionales mediante IA"
authors = [
    {name = "Paul Villalobos",email = "wilverpaul@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
]

[tool.poetry]
packages = [{include = "audiominutes", from = "src"}]

# Testing configuration removed - pytest not included in MVP dependencies


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
