[tool.poetry]
name = "voxcliente-backend"
version = "0.1.0"
description = "Backend para convertir grabaciones de audio en actas de reuniones profesionales mediante IA"
authors = ["Paul Villalobos <wilverpaul@gmail.com>"]
readme = "README.md"
packages = [{include = "voxcliente", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.104.1"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
sqlalchemy = ">=2.0.23"
psycopg2-binary = ">=2.9.9"
python-multipart = ">=0.0.6"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.0.0"
assemblyai = ">=0.43.1,<0.44.0"
resend = ">=2.13.1,<3.0.0"
python-docx = ">=1.1.0"

# Testing configuration removed - pytest not included in MVP dependencies
openai = "^1.107.3"
posthog = "^6.7.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
